--- a/my-app/my-app/src/App.css
+++ b/my-app/my-app/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.menu{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  right: 16%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
